<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mono.oregano.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.mono.oregano.presentation.discover.DiscoverFragment"
        android:label="@string/action_sign_up"
        tools:layout="@layout/fragment_discover"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mono.oregano.presentation.profile.ProfileFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_profile"/>
</navigation>