<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/para"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="361dp"
            android:layout_height="43dp"
            android:text="@string/para_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/profile_picture"
            app:layout_constraintStart_toEndOf="@+id/dislikeButton"
            app:layout_constraintTop_toBottomOf="@+id/author_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/author_name"
            app:layout_constraintStart_toEndOf="@+id/author_name"
            app:layout_constraintTop_toTopOf="@+id/author_name"
            app:layout_constraintVertical_bias="0.428" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_title"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintBottom_toTopOf="@+id/author_name"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_name"
            style="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/para"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/header_title" />

        <ImageButton
            android:id="@+id/profile_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="1dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likeButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/like_button_states"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/dislikeButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dislikeButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            app:icon="@drawable/like_button_states"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/author_name"
            app:layout_constraintStart_toStartOf="@+id/likeButton"
            app:layout_constraintTop_toBottomOf="@+id/likeButton" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/para" />

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:layout_editor_absoluteX="-2dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="80dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>